fe/k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    namespace: default
    name: greenbull-frontend
    labels:
        stack: greenbull
        tier: frontend
        app: greenbull
spec:
    replicas: 1
    selector:
        matchLabels:
            app: greenbull
    minReadySeconds: 10
    strategy:
        type: RollingUpdate
        rollingUpdate:
            maxSurge: 1
            maxUnavailable: 0
    template:
        metadata:
            labels:
                stack: greenbull
                tier: frontend
                app: greenbull
        spec:
            containers:
                - name: greenbull-frontend
                  image: greenbull-registry.kekmoid.com/greenbull-frontend:0.0.2
                  imagePullPolicy: Always
                  ports:
                      - containerPort: 80
                        name: frontend-port
                  volumeMounts:
                      - mountPath: /etc/nginx/conf.d
                        name: config
            volumes:
                - name: config
                  configMap:
                      name: nginx-config
                      items:
                          - key: nginx.default.conf
                            path: default.conf
            imagePullSecrets:
                - name: greenbull-registry
---
apiVersion: v1
kind: Service
metadata:
    namespace: default
    name: frontend-svc
    labels:
        stack: greenbull
        tier: frontend
        app: greenbull
spec:
    selector:
        app: greenbull
    ports:
        - protocol: TCP
          port: 4200
          targetPort: frontend-port
          nodePort: 30003
    type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: greenbull-fe-ingress
    namespace: default
    annotations:
        cert-manager.io/cluster-issuer: "letsencrypt-prod"
        nginx.ingress.kubernetes.io/proxy-body-size: "0"
        nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
        nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
    ingressClassName: public
    tls:
        - hosts:
              - greenbull.kekmoid.com
          secretName: letsencrypt-prod-fe
    rules:
        - host: greenbull.kekmoid.com
          http:
              paths:
                  - path: /
                    pathType: ImplementationSpecific
                    backend:
                        service:
                            name: frontend-svc
                            port:
                                number: 4200
